--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>React App</title>
     <script defer data-domain="hamburgueria-saamu192.vercel.app" src="https://panana.samuelpersuhn.com/js/script.js"></script>
-    <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
+    <script defer data-domain="hamburgueria-saamu192.vercel.app" src="https://panana.samuelpersuhn.com/js/script.tagged-events.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
