--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <script defer data-domain="hamburgueria-saamu192.vercel.app" src="https://panana.samuelpersuhn.com/js/script.js"></script>
-    <script defer data-domain="hamburgueria-saamu192.vercel.app" src="https://panana.samuelpersuhn.com/js/script.tagged-events.js"></script>
+
+    <script
+      defer
+      data-domain="hamburgueria-saamu192.vercel.app"
+      src="https://wecode.samuelpersuhn.com/js/script.js"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
