nit: context script

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <script
       defer
       data-domain="hamburgueria-saamu192.vercel.app"
-      src="https://wecode.samuelpersuhn.com/js/script.js"
+      src="https://app.mycontext.com.br/js/script.js"
     ></script>
   </head>
   <body>
