--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,13 @@
       data-domain="hamburgueria-saamu192.vercel.app"
       src="https://app.mycontext.com.br/js/script.js"
     ></script>
+    <script>
+      window.plausible =
+        window.plausible ||
+        function () {
+          (window.plausible.q = window.plausible.q || []).push(arguments);
+        };
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
